Correction recherche d'objets avec like + tests fonctionnels